# nem-demand-forecast

./: .gitignore  .pre-commit-config.yaml  PROJECT_BRIEF.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
data/: README.md
data/processed/: panel.parquet  split_labels.parquet  test.parquet  train.parquet  validation.parquet
notebooks/: 01_eda_and_cleansing.ipynb  01_eda_and_cleansing.py  02_baseline_arima.ipynb  02_baseline_arima.py  03_bsts_vi.ipynb  03_bsts_vi.py  04_bsts_nuts.ipynb  04_bsts_nuts.py  05_model_comparison.ipynb  05_model_comparison.py  06_bayes_vs_lightgbm.ipynb  06_bayes_vs_lightgbm.py  07_operational_forecasting.ipynb  07_operational_forecasting.py  jupytext.toml
scripts/: build_dataset.py  download_aemo.py  download_weather.py  fit_arima.py  fit_bart.py  fit_bsts_collapsed.py  fit_bsts_hsgp.py  fit_bsts_innovations.py  fit_bsts_nuts.py  fit_bsts_vi.py  fit_gbdt.py  make_readme_figures.py  run_all.sh
src/nemforecastdemand/: __init__.py  config.py  gates.py  plotting.py  splits.py  utils.py
src/nemforecastdemand/data/: __init__.py  aemo.py  loaders.py  weather.py
src/nemforecastdemand/evaluation/: __init__.py  calibration.py  diagnostics.py  divergence.py  metrics.py
src/nemforecastdemand/features/: calendar.py  preprocessing.py  weather.py
src/nemforecastdemand/models/: __init__.py  arima.py  base.py  bsts.py  gbdt.py  hsgp.py  (+4 more)
tests/: conftest.py  test_bsts.py  test_config.py  test_divergence.py  test_features.py  test_gates.py  test_innovations.py  test_leakage.py  test_loaders.py  test_metrics.py  test_splits.py
